<resources>
    <string name="app_name">Project9</string>
    <string name="item_name">Item Name</string>
    <string name="price">price</string>
    <string name="quantity">Quantity</string>
    <string name="product_supplier_name">product Supplier Name</string>
    <string name="product_supplier_phone">product Supplier Phone</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="check">Check please</string>
    <string name="titledelete">Delete all data</string>
    <string name="msgdidte">You want to delete all data ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deteleItem">Delete Item</string>
    <string name="msgitem">You want to delete the</string>
    <string name="storge">The database is empty.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="call">CALL</string>


</resources>
